--- a/TA4.html
+++ b/TA4.html
@@ -4,8 +4,8 @@
         <title>TA4</title>
     </head>
     <body>
-        <a>https://www.elpais.com.uy/</a><br>
-        <a>https://webasignatura.ucu.edu.uy/my/courses.php</a><br>
-        <a>https://www.bookshop.com.uy/</a><br>
+        <a href="https://www.elpais.com.uy/">El País Uruguay</a><br>
+        <a href="https://webasignatura.ucu.edu.uy/my/courses.php">Web Asignatura UCU</a><br>
+        <a href="https://www.bookshop.com.uy/">Bookshop Uruguay</a><br>
     </body>
 </html>
